docs: add swagger
