# backend/src/route.js
@@ -2,13 +2,14 @@ const router = require('express-promise-router')();
 const {checkAuth,requiresAdmin} = require('./middlewares/check-auth');
 
 
-router.use('/auth', require('./api/auth/route'));
+router.use('/auth', require('./api/auth/route'), /*#swagger.tags = ['Auth']*/);
+
 
 router.use(checkAuth);
-router.use('/users', require('./api/user/route'));
-router.use('/profile', require('./api/user/route-profile'));
+router.use('/users', require('./api/user/route'),  /*#swagger.tags = ['Users']*/);
+router.use('/profile', require('./api/user/route-profile', /*#swagger.tags = ['Profile']*/));
 
 router.use(requiresAdmin)
-router.use('/rbac', require('./api/rbac/route'));
+router.use('/rbac', require('./api/rbac/route'), /*#swagger.tags = ['rbac']*/);
 
 module.exports = router;
